assets and html edits

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             }
 
             // Enumerate ids of the layers.
-            const toggleableLayerIds = ['abandoned roads and basemap', 'abandoned roads', 'abandoned roads theme', 'abandoned roads theme'];
+            const toggleableLayerIds = ['abandoned roads and basemap', 'abandoned roads', 'abandoned roads theme', 'monochrome basemap'];
 
             // Set up the corresponding toggle button for each layer.
             for (const id of toggleableLayerIds) {
